added few new lines

--- a/First.html
+++ b/First.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    This is my first 
+    <header>
+        This is my first html code
+    </header>
+    <main>
+        This is the main code section
+    </main>
+    <footer>
+        This is the footer of the code
+    </footer>
 </body>
 </html>
